This version allows the user to browse in a company hierarchy
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@640 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/seam/view/layout/menu.xhtml
+++ b/seam/view/layout/menu.xhtml
@@ -8,6 +8,7 @@
     <rich:toolBarGroup>
         <h:outputText value="#{projectName}:"/>
         <s:link id="menuHomeId" view="/home.xhtml" value="Home" propagation="none"/>
+		<s:link id="allCompanies" value="List all companies" action="listAllCompanies" rendered="#{identity.loggedIn}"/> 
     </rich:toolBarGroup>
     <!-- @newMenuItem@ -->
     <rich:toolBarGroup location="right">
