First operational version. Please, take a look at the USAGE file.
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@642 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/seam/view/listAllCompanies.xhtml
+++ b/seam/view/listAllCompanies.xhtml
@@ -29,7 +29,7 @@
  	               <s:button value="Show details" action="#{companyAction.showDetails()}" />
 	            </rich:column>
 			    <rich:column>
- 	               <s:button value="Cut salaries" action="#{companyAction.cutSalary()}" />
+ 	               <s:button value="Cut salaries" action="#{companyAction.cutSalaries()}" />
 	            </rich:column>
        		</rich:dataTable>
             </div>
