--- a/seam/view/login.xhtml
+++ b/seam/view/login.xhtml
@@ -25,14 +25,11 @@
                     <h:outputLabel for="password">Password</h:outputLabel>
                     <h:inputSecret id="password"
                                 value="#{credentials.password}"/>
-                    <h:outputLabel for="rememberMe">Remember me</h:outputLabel>
-                    <h:selectBooleanCheckbox id="rememberMe"
-                                          value="#{rememberMe.enabled}"/>
                 </h:panelGrid>
             </div>
 
             <p>
-              <i>Note - </i> You may login with the username 'admin' and a blank password.
+              <i>Note - </i> You may login with the username / password 'admin' or 'user'.
             </p>
 
         </rich:panel>
