--- a/seam/view/showDepartmentDetails.xhtml
+++ b/seam/view/showDepartmentDetails.xhtml
@@ -16,10 +16,10 @@
             <f:facet name="header">Department details</f:facet>
 
             <div class="dialog">
-                <h1>Name: #{department.name}</h1> <br/>
-                <h1>Manager: #{department.manager}</h1><br/>
-                <h1>Total salaries: #{department.total()}</h1><br/>
-                <rich:dataTable value="#{department.departments}" var="d" width="300px" hender="#{department.hasSubDepartments()}">
+                <h2>Name: #{department.name}</h2> <br/>
+                <h2>Manager: #{department.manager.name} (Salary: #{department.manager.salary})</h2><br/>
+                <h2>Total salaries: #{department.total()}</h2><br/>
+                <rich:dataTable value="#{department.departments}" var="d" width="300px" rendered="#{department.hasSubDepartments()}">
         		     <f:facet name="header">Departments</f:facet>
             		<rich:column>
 			        	<f:facet name="header">Name</f:facet>
@@ -34,7 +34,7 @@
 	        		    <h:outputText value="#{d.total()}" />
 				    </rich:column>
 				    <rich:column>
-	        		    <s:button value="Detail" action="#{companyAction.showDepartmentDetails(d.id)}" />
+	        		    <h:commandButton value="Detail" action="#{companyAction.showDepartmentDetails(d)}" />
 				    </rich:column>
        		</rich:dataTable>
        		
