Cut salaries interface for companies, deparments, and employees
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@653 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/seam/view/showCompanyDetails.xhtml
+++ b/seam/view/showCompanyDetails.xhtml
@@ -36,6 +36,9 @@
 				    <rich:column>
 	        		    <h:commandButton value="Detail" action="#{companyAction.showDepartmentDetails(d)}" />
 				    </rich:column>
+				    <rich:column>
+	        		    <h:commandButton value="Cut salaries" action="#{companyAction.cutSalariesFromDepartment(d)}" />
+				    </rich:column>
        		</rich:dataTable>
             </div>
         </rich:panel>
