--- a/silverlight/silverlight/DepartmentDetailsPage.xaml
+++ b/silverlight/silverlight/DepartmentDetailsPage.xaml
@@ -6,12 +6,12 @@
           xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation"
            mc:Ignorable="d"
            d:DesignWidth="640" d:DesignHeight="480"
-           Title="DepartmentDetailsPage Page">
+           Title="DepartmentDetailsPage Page" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk">
     <Grid x:Name="LayoutRoot">
-        <TextBlock Margin="136,72,398,380" Name="textBlock1" Text="Manager:" FontSize="18" />
-        <TextBlock Margin="228,72,209,380" Name="txtManager" Text="{Binding Path=Manager.Name}" FontSize="18" />
-        <TextBlock Margin="55,102,409,345" Name="textBlock2" Text="Department Total:" FontSize="18" FontWeight="Normal" />
-        <TextBlock Margin="0,106,209,345" Name="txtTotal" Text="{Binding Total}" HorizontalAlignment="Right" Width="203" FontSize="18" />
-        <Button Content="Cut" Height="38" HorizontalAlignment="Left" Margin="240,234,0,0" Name="button1" VerticalAlignment="Top" Width="101" FontSize="18" />
+        <TextBlock Margin="188,78,346,0" Name="textBlock1" Text="Manager:" VerticalAlignment="Top" FontSize="18" />
+        <TextBlock Margin="280,78,157,0" Name="txtManager" Text="{Binding Path=Manager.Name}" VerticalAlignment="Top" FontSize="18" Height="27" />
+        <TextBlock Margin="280,112,217,0" Name="txtTotal" Text="{Binding Total}" VerticalAlignment="Top" FontSize="18" Height="25" />
+        <Button Content="Cut" Height="38" HorizontalAlignment="Left" Margin="240,234,0,0" Name="button1" VerticalAlignment="Top" Width="101" FontSize="18" Click="Button1Click" />
+        <sdk:Label Height="28" HorizontalAlignment="Left" Margin="221,109,0,0" Name="label1" VerticalAlignment="Top" Width="120" Content="Total:" FontSize="18" />
     </Grid>
 </navigation:Page>
