--- a/wpf/MainWindow.xaml
+++ b/wpf/MainWindow.xaml
@@ -1,8 +1,10 @@
 ﻿<Window x:Class="Wpf.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525" xmlns:my="clr-namespace:Wpf" Loaded="Window_Loaded">
+        Title="MainWindow" Height="600" Width="800" xmlns:my="clr-namespace:Wpf" Loaded="Window_Loaded" ResizeMode="NoResize">
     <Grid>
-        <TreeView Height="311" HorizontalAlignment="Left" Name="treeView1" VerticalAlignment="Top" Width="209" />
+        <TreeView Height="561" HorizontalAlignment="Left" Name="treeCompany" VerticalAlignment="Top" Width="267" SelectedItemChanged="TreeCompanySelectedItemChanged" >
+        </TreeView>
+        <Frame x:Name="ContentFrame" Source="/Home.xaml" Margin="265,0,0,0" />
     </Grid>
 </Window>
