html5 ajax refactoring
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1522 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5ajax/css/style.css
+++ b/html5ajax/css/style.css
@@ -51,7 +51,9 @@ tr {
 /* table cell */
 td {
     vertical-align: top;
+    text-align: left;
     padding-bottom: 0px;
+    min-width: 90px;
 }
 
 /* table headline */
@@ -74,7 +76,7 @@ input {}
 
 /* button */
 .button {
-    width: 70px;
+    width: 80px;
     height: 25px;
 }
 
