--- a/html5tree/css/style.css
+++ b/html5tree/css/style.css
@@ -29,12 +29,19 @@ div {}
     min-width: 450px;
 }
 
-/* headline */
+/* headlines */
 h1 {
     text-align: center;
     font-size: x-large;
-    font-family: fantasy;
-    font-style: normal;
+    font-family: sans-serif;
+    font-weight: lighter;
+    font-variant: small-caps;
+}
+
+h3 {
+    text-align: center;
+    font-size: medium;
+    font-family: sans-serif;
     font-weight: lighter;
     font-variant: small-caps;
 }
@@ -60,13 +67,16 @@ tr {
 td {
     vertical-align: top;
     text-align: left;
-    padding-bottom: 0px;
 }
 
 .out {
     border-width: thin;
     border: 1px #000000 solid;
     background: #e0e0e0;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .label {
@@ -83,6 +93,11 @@ th {
 }
 
 /* --------------------------------------------------------- */
+/* selectbox */
+select {
+    height: 23px;
+}
+
 /* input: textfield, button */
 input {}
 
@@ -91,18 +106,40 @@ input {}
     width: 350px;
 }
 
-select {
-    height: 22px;
-}
-
 /* button */
 .button {
-    width: 80px;
+    min-width: 80px;
     height: 25px;
+    vertical-align: text-top;
+}
+
+.buttonLong {
+    min-width: 140px;
+    height: 25px;
+    vertical-align: text-top;
 }
 
 /* --------------------------------------------------------- */
 /* Tree-Buttons */
+
+.companyButtonError {
+    color:#660000;
+    font-weight: bold;
+    background-color: #e7e0e0; 
+    border:0px;
+    border-top: 1px ridge #660000;
+    border-bottom: 1px groove #660000;
+}
+
+.companyButtonError:HOVER {
+    color:#666600;
+    font-weight: bold;
+    background-color: #e7e7e0; 
+    border:0px;
+    border-top: 1px ridge #666600;
+    border-bottom: 1px groove #666600;
+}
+
 .companyButton {
     color:#000000;
     font-weight: bold;
@@ -115,6 +152,7 @@ select {
     background-color: #e0e7e0;
     border-top: 1px ridge #006600;
     border-bottom: 1px groove #006600;
+    
 }
 
 .departmentButton {
