html5tree manager change
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1861 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5tree/css/style.css
+++ b/html5tree/css/style.css
@@ -155,6 +155,22 @@ input {}
     
 }
 
+.departmentButtonError {
+    color:#660000;
+    font-style: italic;
+    background-color: #e7e0e0; 
+    border:0px;
+    border-top: 1px ridge #660000;
+    border-bottom: 1px groove #660000;
+}
+
+.departmentButtonError:HOVER {
+    color:#666600;
+    background-color: #e7e7e0;
+    border-top: 1px ridge #666600;
+    border-bottom: 1px groove #666600;
+}
+
 .departmentButton {
     color:#000000;
     font-style: italic;
@@ -185,7 +201,7 @@ input {}
 /* --------------------------------------------------------- */
 /* errormessages */
 error {
-    color: #ee3232;
+    color: #660000;
 }
 
 /* --------------------------------------------------------- */
