html5tree create department/employee
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1876 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5tree/css/style.css
+++ b/html5tree/css/style.css
@@ -185,6 +185,22 @@ input {}
     border-bottom: 1px groove #006600;
 }
 
+.employeeButtonError {
+    color:#660000;
+    font-style: italic;
+    background-color: #e7e0e0; 
+    border:0px;
+    border-top: 1px ridge #660000;
+    border-bottom: 1px groove #660000;
+}
+
+.employeeButtonError:HOVER {
+    color:#666600;
+    background-color: #e7e7e0;
+    border-top: 1px ridge #666600;
+    border-bottom: 1px groove #666600;
+}
+
 .employeeButton {
     color:#000000;
     background-color: #e0e0e0; 
