--- a/rubyonrails/companies/app/views/employees/_form.html.erb
+++ b/rubyonrails/companies/app/views/employees/_form.html.erb
@@ -12,17 +12,20 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <h3><%= f.label :name %><br /></h3>
     <%= f.text_field :name %>
   </div>
+  <hr>
   <div class="field">
-    <%= f.label :address %><br />
+    <h3><%= f.label :address %><br /></h3>
     <%= f.text_field :address %>
   </div>
+  <hr>
   <div class="field">
-    <%= f.label :salary %><br />
+    <h3><%= f.label :salary %><br /></h3>
     <%= f.text_field :salary %>
   </div>
+  <hr>
   <div class="actions">
     <%= f.submit %>
   </div>
