--- a/rubyonrails/companies/app/views/companies/_form.html.erb
+++ b/rubyonrails/companies/app/views/companies/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <h3><%= f.label :name %><br /><h3>
     <%= f.text_field :name %>
   </div>
   <div class="actions">
